--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -28,9 +28,7 @@
                 </li>
                 <li class="nav-item mr-3">
                     <a class="nav-link" href="login.html">
-                        <i class="fas fa-sign-in-alt"></i>
-
-                        Login</a>
+                        <i class="fas fa-sign-in-alt"></i>Login</a>
                 </li>
             </ul>
         </div>
