accounts app added, Titles dynamic, login logout dashboard done

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -1,6 +1,13 @@
 {% extends 'base.html' %}
 {% block content %}
 {% load humanize %}
+{% block title %}
+| Welcome
+{% endblock %}
+
+<br>
+<!-- Alert -->
+{% include 'partials/_alerts.html' %}
 
 <!-- Showcase -->
 <section id="showcase">
