--- a/templates/listings/listing.html
+++ b/templates/listings/listing.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% load humanize %}
-
+{% block title %}
+| {{ listing.title }}
+{% endblock %}
 {% block content %}
 <section id="showcase-inner" class="py-5 text-white">
     <div class="container">
@@ -135,7 +137,7 @@
             </div>
             <div class="col-md-3">
                 <div class="card mb-3">
-                    <img class="card-img-top" src="{{ listing.realtor.photo.url }}" alt="Seller of the month">
+                    <img class="card-img-top" src="{{ listing.realtor.photo.url  }}" alt="Seller of the month">
                     <div class="card-body">
                         <h5 class="card-title">Property Realtor</h5>
                         <h6 class="text-secondary">{{ listing.realtor }}</h6>
