--- a/templates/listings/listings.html
+++ b/templates/listings/listings.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
 {% load humanize %}
+{% block title %}
+| Listings
+{% endblock %}
 {% block content %}
 <!-- Breadcrumb -->
 <section id="bc" class="mt-3">
